# Vigilant

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  cat.txt  install.ps1  install.sh  main.cpp  readme.md
.github/workflows/: build.yml
cmake/: CreateSymlinkIfWritable.cmake
include/: CLI.h  DashboardHTML.h  DashboardServer.h  Logger.h  ProxyServer.h  ServiceManager.h  StatsManager.h  VigConfig.h  httplib_vendor.h
nginx/: vigilant.conf
services/: 24controlapi.vig  robotrader.vig  studysync.vig
src/: CLI.cpp  DashboardServer.cpp  Logger.cpp  ProxyServer.cpp  ServiceManager.cpp  StatsManager.cpp  VigConfig.cpp
tests/: simulate_traffic.py  test_cli.cpp  test_helpers.h  test_ssl.cpp  test_traffic.cpp  test_vigconfig.cpp
